# a-data-pipeline

./: Dockerfile  Dockerfile.txt  README.md  project_structure.txt  pyproject.toml  requirements.txt  setup.py
config/: config.yml
src/data_pipeline/: pipeline.py
src/data_pipeline/config/: app_config.py
src/data_pipeline/database/: base.py  duck_db.py  spark_db.py
src/data_pipeline/transformations/: transforms.py
tests/: README.md  conftest.py  test_config.yml
tests/integration/: test_pipeline.py
tests/unit/: test_transforms.py
